libraries/ecc100j/lib/ecc100/ecc.h

typedef int Bln32;                              /**< Boolean compatible to older C      */
typedef int Int32;                              /**< Basic type                         */
/** @brief  Actor types                                                              */
typedef enum {
  ECC_actorLinear,                           /**< Actor is of linear type            */
  ECC_actorGonio,                            /**< Actor is of goniometer type        */
  ECC_actorRot                               /**< Actor is of rotator type           */
} ECC_actorType;
/** @brief Control frequency
 *
 *  Controls the frequency of the actuator signal.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  frequency     Frequency in mHz
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlFrequency( Int32 deviceHandle,
                                    Int32 axis,
                                    Int32* frequency,
                                    Bln32 set );
/** @brief Control actor selection
 *
 *  Selects the actor to be used on selected axis from actor presets
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  actor         Actor selection [0..255]
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlActorSelection( Int32 deviceHandle,
                                         Int32 axis,
                                         Int32* actor,
                                         Bln32 set );
/** @brief Get actor name
 *
 *  Get the name of actual selected actor
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  name          Name of the actor coded as NULL-terminated c-string. User must provide at least 20 bytes allocated memory.
 *  @return               Result of function
 */
Int32 NCB_API ECC_getActorName( Int32 deviceHandle, 
                                Int32 axis,
                                char* name );
/** @brief Get actor type
 *
 *  Get the type of actual selected actor
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  type          Type of the actor. See @ref ECC_actorType
 *  @return               Result of function
 */
Int32 NCB_API ECC_getActorType( Int32 deviceHandle, 
                                Int32 axis,
                                ECC_actorType* type );
/** @brief Save params
 *
 *  Saves user parameters to persistant flash in controller. Parameters that will be saved are amplitude, 
 *  frequency and actor selection of each axis.
 *
 *  @param  deviceHandle  Handle of device

 *  @return               Result of function
 */
Int32 NCB_API ECC_setSaveParams( Int32 deviceHandle );
/** @brief Writing flash status
 *
 *  Retrieves the status of writing to flash. Indicates whether a write access
 *  to the flash is performing.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  writing       status
 *  @return               Result of function
 */
Int32 NCB_API ECC_getStatusFlash( Int32 deviceHandle, 
                                  Bln32* writing );
/** @brief Reset position
 *
 *  Resets the actual position to zero and marks the reference position as invalid.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @return               Result of function
 */
Int32 NCB_API ECC_setReset( Int32 deviceHandle,
                            Int32 axis );
/** @brief Control actor approach
 *
 *  Controls the approach of the actor to the target position
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        Enables/ disables the approach
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlMove( Int32 deviceHandle,
                               Int32 axis,
                               Bln32* enable,
                               Bln32 set );
/** @brief Single step
 *
 *  Triggers a single step in desired direction.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  backward      Selects the desired direction. False triggers a forward step,
 *                        true a backward step.
 *  @return               Result of function
 */
Int32 NCB_API ECC_setSingleStep( Int32 deviceHandle,
                                 Int32 axis,
                                 Bln32 backward );
/** @brief Control continous movement forward
 *
 *  Controls continous movement in forward direction. If enabled a potential present movement
 *  in the opposite direction is stopped. The parameter "false" stops all movement of the axis regardless
 *  its direction.
 *
 *  @param  deviceHandle  Handle of device
 *  @param  axis          Number of the axis to be configured
 *  @param  enable        Enables/ disables the movement
 *  @param  set           1: Send the supplied values to the controller
 *                        0: Ignore input; only retreive the results
 *  @return               Result of function
 */
Int32 NCB_API ECC_controlContinousFwd( Int32 deviceHandle,
                                       Int32 axis,
                                       Bln32* enable,
                                       Bln32 set );