ecc100j/src/ecc100/bindings/EccLibrary.java


  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlFrequency(int deviceHandle,
                                                   int axis,
                                                   @Ptr long frequency,
                                                   int set);

  /**
   * @brief Control actor selection<br>
   *        <br>
   *        Selects the actor to be used on selected axis from actor presets<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param actor
   *          Actor selection [0..255]<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlActorSelection(Int32, Int32, Int32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:228</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlActorSelection(int deviceHandle,
                                              int axis,
                                              Pointer<Integer> actor,
                                              int set)
  {
    return ECC_controlActorSelection(deviceHandle,
                                     axis,
                                     Pointer.getPeer(actor),
                                     set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlActorSelection(int deviceHandle,
                                                        int axis,
                                                        @Ptr long actor,
                                                        int set);

  /**
   * @brief Get actor name<br>
   *        <br>
   *        Get the name of actual selected actor<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param name
   *          Name of the actor coded as NULL-terminated c-string. User must
   *          provide at least 20 bytes allocated memory.<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getActorName(Int32, Int32, char*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:242</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getActorName(int deviceHandle,
                                     int axis,
                                     Pointer<Byte> name)
  {
    return ECC_getActorName(deviceHandle,
                            axis,
                            Pointer.getPeer(name));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getActorName(int deviceHandle,
                                               int axis,
                                               @Ptr long name);

  /**
   * @brief Get actor type<br>
   *        <br>
   *        Get the type of actual selected actor<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param type
   *          Type of the actor. See @ref ECC_actorType<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getActorType(Int32, Int32, ECC_actorType*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:257</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getActorType(int deviceHandle,
                                     int axis,
                                     Pointer<IntValuedEnum<EccLibrary.ECC_actorType>> type)
  {
    return ECC_getActorType(deviceHandle,
                            axis,
                            Pointer.getPeer(type));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getActorType(int deviceHandle,
                                               int axis,
                                               @Ptr long type);

  /**
   * @brief Save params<br>
   *        <br>
   *        Saves user parameters to persistant flash in controller. Parameters
   *        that will be saved are amplitude, <br>
   *        frequency and actor selection of each axis.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_setSaveParams(Int32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:271</i>
   */
  @Convention(Convention.Style.StdCall)
  public static native int ECC_setSaveParams(int deviceHandle);

  /**
   * @brief Writing flash status<br>
   *        <br>
   *        Retrieves the status of writing to flash. Indicates whether a write
   *        access<br>
   *        to the flash is performing.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param writing
   *          status<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_getStatusFlash(Int32, Bln32*)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:284</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_getStatusFlash(int deviceHandle,
                                       Pointer<Integer> writing)
  {
    return ECC_getStatusFlash(deviceHandle, Pointer.getPeer(writing));
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_getStatusFlash(int deviceHandle,
                                                 @Ptr long writing);

  /**
   * @brief Reset position<br>
   *        <br>
   *        Resets the actual position to zero and marks the reference position
   *        as invalid.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_setReset(Int32, Int32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:297</i>
   */
  @Convention(Convention.Style.StdCall)
  public static native int ECC_setReset(int deviceHandle, int axis);

  /**
   * @brief Control actor approach<br>
   *        <br>
   *        Controls the approach of the actor to the target position<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          Enables/ disables the approach<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlMove(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:312</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlMove(int deviceHandle,
                                    int axis,
                                    Pointer<Integer> enable,
                                    int set)
  {
    return ECC_controlMove(deviceHandle,
                           axis,
                           Pointer.getPeer(enable),
                           set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlMove(int deviceHandle,
                                              int axis,
                                              @Ptr long enable,
                                              int set);

  /**
   * @brief Single step<br>
   *        <br>
   *        Triggers a single step in desired direction.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param backward
   *          Selects the desired direction. False triggers a forward step,<br>
   *          true a backward step.<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_setSingleStep(Int32, Int32, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:328</i>
   */
  @Convention(Convention.Style.StdCall)
  public static native int ECC_setSingleStep(int deviceHandle,
                                             int axis,
                                             int backward);

  /**
   * @brief Control continous movement forward<br>
   *        <br>
   *        Controls continous movement in forward direction. If enabled a
   *        potential present movement<br>
   *        in the opposite direction is stopped. The parameter "false" stops
   *        all movement of the axis regardless<br>
   *        its direction.<br>
   *        <br>
   * @param deviceHandle
   *          Handle of device<br>
   * @param axis
   *          Number of the axis to be configured<br>
   * @param enable
   *          Enables/ disables the movement<br>
   * @param set
   *          1: Send the supplied values to the controller<br>
   *          0: Ignore input; only retreive the results<br>
   * @return Result of function<br>
   *         Original signature :
   *         <code>__attribute__((dllimport)) Int32 ECC_controlContinousFwd(Int32, Int32, Bln32*, Bln32)</code><br>
   *         <i>native declaration : lib\ecc100\ecc.h:346</i>
   */
  @Convention(Convention.Style.StdCall)
  public static int ECC_controlContinousFwd(int deviceHandle,
                                            int axis,
                                            Pointer<Integer> enable,
                                            int set)
  {
    return ECC_controlContinousFwd(deviceHandle,
                                   axis,
                                   Pointer.getPeer(enable),
                                   set);
  }

  @Convention(Convention.Style.StdCall)
  protected native static int ECC_controlContinousFwd(int deviceHandle,
                                                      int axis,
                                                      @Ptr long enable,
                                                      int set);
